fix alignment of items in resume

--- a/porfolio/src/components/TimelinePopover/style.css
+++ b/porfolio/src/components/TimelinePopover/style.css
@@ -10,25 +10,25 @@
 }
 
 .milestone.first {
-  top: 100px;
+  top: 125px;
 }
 
 .milestone.second {
-  top: 200px;
+  top: 225px;
 }
 
 .milestone.third {
-  top: 300px;
+  top: 325px;
 }
 
 .milestone.fourth {
-  top: 400px;
+  top: 425px;
 }
 
 .milestone.fifth {
-  top: 500px;
+  top: 525px;
 }
 
 .milestone.sixth {
-  top: 600px;
+  top: 625px;
 }
